graphql-parser/tests/snapshots/test__parse_query__empty_union.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `union[Name]`\nExpected `{`, `query`, `mutation`, `subscription` or `fragment`\n",
    ),
)
