graphql-parser/tests/snapshots/test__parse_query__enums.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `enum[Name]`\nExpected `{`, `query`, `mutation`, `subscription` or `fragment`\n",
    ),
)
