graphql-parser/tests/snapshots/test__parse_query__fail_bad_args.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Err(
    ParseError(
        "Parse error at 2:10\nUnexpected `[[Punctuator]`\nExpected `Name`\n",
    ),
)
