graphql-parser/tests/snapshots/test__parse_query__fragment.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            Fragment(
                FragmentDefinition {
                    position: Pos(1:1),
                    name: "frag",
                    type_condition: On(
                        "Friend",
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        span: (
                            Pos(1:25),
                            Pos(3:1),
                        ),
                        items: [
                            Field(
                                Field {
                                    position: Pos(2:3),
                                    alias: None,
                                    name: "node",
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        span: (
                                            Pos(2:3),
                                            Pos(2:3),
                                        ),
                                        items: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ],
    },
)
