graphql-parser/tests/snapshots/test__parse_query__implements_amp.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `type[Name]`\nExpected `{`, `query`, `mutation`, `subscription` or `fragment`\n",
    ),
)
